# text-generation

./: .dockerignore  Dockerfile  LICENSE  pyproject.toml  start.sh
.github/workflows/: flake8.yml
text_generation/: config.py  enums.py  event_handlers.py  server.py
text_generation/api/: __init__.py  prediction.py
text_generation/schemas/: __init__.py  request.py
