[tool.black]
line-length = 119
target-version = ["py38"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = [
    "api",
    "config",
    "enums",
    "event_handlers"
]

line_length = 119
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "text-generation"
version = "0.1.0"
description = ""
authors = ["YoungJae Kim <byeongal@comcom.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp38-cp38-linux_x86_64.whl"}
loguru = "^0.6.0"
transformers = "^4.21.1"
accelerate = "^0.12.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
redis = "^4.3.4"
aiocache = "^0.11.1"
aioredis = "1.3.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
